syntax = "proto3";

package tree;

option go_package = "github.com/nspcc-dev/neofs-node/pkg/services/tree";

// KeyValue represents key-value pair attached to an object.
message KeyValue {
  string key = 1 [json_name = "key"];
  bytes value = 2 [json_name = "value"];
}

// LogMove represents log-entry for a single move operation.
message LogMove {
  // ID of the parent node.
  uint64 parent_id = 1 [json_name = "parentID"];
  // Node meta information, including operation timestamp.
  bytes meta = 2 [json_name = "meta"];
  // ID of the node to move.
  uint64 child_id = 3 [json_name = "childID"];
}

// Signature of a message.
message Signature {
  bytes key = 1 [json_name = "key"];
  bytes sign = 2 [json_name = "signature"];
}
